# LegalChat

./: .gitignore  LICENSE  README.md  run_paradedb_with_docker.sh
chains/app/agent/: myagent.py
chains/app/chain/: easy_chain.py
chains/app/pipeline/: settings.py
chains/app/tools/: base.py
docs/dev/: chat_uis.md
docs/postgres/: psycopg.md
frontend/: README.md  package-lock.json  package.json
frontend/app/components/: header.tsx
frontend/app/components/ui/chat/: chat-avatar.tsx
frontend/app/constants/: logo.ts
legalgpt/backend/: .env.template  generate.py  pyproject.toml
legalgpt/backend/app/: settings.py
legalgpt/backend/app/engine/: utils.py
legalgpt/backend/app/utils/: logging.py
legalgpt/chains/: README.md  main.py  pyproject.toml  rag_chatbot_app.py
legalgpt/chains/app/agent/: base.py  myagent.py
legalgpt/chains/app/pipeline/: settings.py
legalgpt/chains/app/tools/: ask_for_input.py
legalgpt/frontend/: .env.template  package-lock.json  package.json
samples/: README.md  embeddings_search_app.py  embeddings_search_lib.py  rag_chatbot_app.py  rag_chatbot_lib.py  recommendations_app.py  recommendations_lib.py  streaming_app.py  streaming_lib.py
server/: .env.template  README.md  generate.py  main.py  pyproject.toml
